# cellbin2

./: .gitignore  README.md  Stereocell.md  data  merge_gef.py  pyproject.toml  read_gef.ipynb  read_gef.py  sim_crosstalk.ipynb  sim_crosstalk.py
.codex/skills/: academic-researcher  editor  finalize-agent-prompt  finnish-humanizer  structured-autonomy-generate  structured-autonomy-plan
.iflow/skills/: fix-errors  project-planner  python-expert  structured-autonomy-implement  visualization-expert
cellbin2/config/demos/: Stereocell_analysis.json
cellbin2/dnn/: onnx_net.py
cellbin2/modules/: metadata.py
cellbin2/utils/: clog.py
scripts/: Stereocell_analysis.sh  convert_test_tif_to_png.py  setup_ort_cuda_env.sh
test/: test_convert_test_tif_to_png.py  test_read_gef.py  test_sim_crosstalk.py
